--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ publish = false
 
 [dependencies]
 solana-program = "=1.7.11"
+thiserror = "1.0.29"
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
 
 [features]
 test-bpf = []
