--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 solana-program = "=1.7.11"
 thiserror = "1.0.29"
 spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
+arrayref = "0.3.6"
 
 [features]
 test-bpf = []
